Laptop fixed working on mobile

--- a/styles.css
+++ b/styles.css
@@ -135,6 +135,12 @@ a {
     object-fit: contain;
 }
 
+@media (min-width: 768px) {
+  #headshot {
+    max-height: 50vh;
+  }
+}
+
 #about {
     background-color: var(--bs-primary);
     width: 100%;
